tests/testfiles/passing/invalid_identifiers/keyword_as_id_case.c
/* Keyword as identifier: case */
int main() {
    int case;
}